[metadata]
author = IAS
author_email = network@ias.edu
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = certbot_deployer Pluggable certbot deploy hook framework

long_description = file: README.md
long_description_content_type = text/markdown
name = certbot_deployer
project_urls =
    Documentation = 
    Bug Tracker = 
    Source = 
url = 
version = attr: certbot_deployer.__version__

[options]
include_package_data = True
# install_requires =
# 	package>=1.0.0,<2.0.0
packages =
	certbot_deployer
	certbot_deployer.deployer
	certbot_deployer.test_helpers
package_dir =
	certbot_deployer = certbot_deployer
	certbot_deployer.deployer = certbot_deployer/deployer
	certbot_deployer.test_helpers = tests/helpers
python_requires = >=3.9
scripts =
	bin/certbot_deployer
	bin/certbot-deployer

[options.package_data]
certbot_deployer = py.typed
certbot_deployer.deployer = py.typed
certbot_deployer.test_helpers = py.typed
