[metadata]
author = IAS
author_email = network@ias.edu
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = certbot_deployer Pluggable certbot deploy hook framework

long_description = file: README.md, CHANGELOG.md, LICENSE.md
long_description_content_type = text/markdown
name = certbot_deployer
project_urls =
	Documentation = https://theias.github.io/certbot_deployer/
	Bug Tracker = https://github.com/theias/certbot_deployer/issues
	Source = https://github.com/theias/certbot_deployer
url = https://github.com/theias/certbot_deployer
version = attr: certbot_deployer.meta.__version__

[options]
include_package_data = True
install_requires =
	cryptography>=44.0.1,<45.0.0
packages =
	certbot_deployer
	certbot_deployer.deployer
	certbot_deployer.main
	certbot_deployer.test_helpers
package_dir =
	certbot_deployer = certbot_deployer
	certbot_deployer.main = certbot_deployer/main
	certbot_deployer.deployer = certbot_deployer/deployer
	certbot_deployer.test_helpers = tests/helpers
python_requires = >=3.9
[options.entry_points]
console_scripts =
	certbot-deployer = certbot_deployer.main:main
	certbot_deployer = certbot_deployer.main:main

[options.package_data]
certbot_deployer = py.typed
certbot_deployer.deployer = py.typed
certbot_deployer.test_helpers = py.typed
